--- a/src/index.css
+++ b/src/index.css
@@ -132,7 +132,7 @@ code {
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 9999;
+  z-index: 99999;
 }
 
 .modal {
